Fix for NWRCA-104.